✨ Add Passive Mode feature to RObjkt extension to enhance user control 🐛 Fix issues with referral URL handling in both active and passive modes 📝 Update README to reflect changes in functionality and community focus ♻️ Refactor code for better readability and maintainability 🔧 Remove options page and related scripts to streamline the extension ⬆️ Bump version to 1.0.1 for release of new features and fixes

--- a/styles.css
+++ b/styles.css
@@ -142,3 +142,7 @@ input:checked + .slider:before {
         background-color: #a71d2a;
     }
 }
+
+.sub {
+    font-size: 0.8em;
+}
